# soccer-betting-contract

./: .gitignore  Cargo.toml  README.md
apps/cosm-wasm-web/: README.md  package-lock.json  package.json
apps/cosm-wasm-web/app/: globals.css  layout.tsx  page.tsx
apps/cosm-wasm-web/lib/: config.ts  contract-client.ts
apps/solana-web/app/: page.tsx
apps/solana-web/lib/: anchor-client.ts  config.ts  contract-types.ts  execute-client.ts  format.ts  history.ts  wallet.ts
apps/web/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  page.tsx
apps/web/lib/: contract-client.ts  contract-types.ts  format.ts  history.ts  keplr.ts
contracts/soccer-betting-contract/: README.md
contracts/soccer-betting-contract/deployment/: README.md  cancel-market.example.json  create-market.example.json  env.example  instantiate.local.json  refund.example.json
contracts/soccer-betting-contract/schema/: soccer-betting-contract.json
contracts/soccer-betting-contract/schema/raw/: execute.json  instantiate.json  query.json  response_to_bettor.json  response_to_config.json  response_to_market.json
contracts/soccer-betting-contract/scripts/: deploy.sh
contracts/soccer-betting-contract/src/: lib.rs  state.rs
solana/: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
solana/tests/: soccer-betting-anchor.ts
src/: contract.rs  error.rs  msg.rs  tests.rs
