[package]
name = "soccer-betting-contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-schema = "1.5.11"
cosmwasm-std = "1.5.11"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.22"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = "1.0.69"

[dev-dependencies]
cw-multi-test = "1.2.0"
